--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.fieldvalidation">
+    package="com.noban.fieldvalidation" >
 
     <application
         android:allowBackup="true"
@@ -8,12 +8,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Fieldvalidation">
+        android:theme="@style/Theme.Fieldvalidation" >
         <activity
-            android:name=".MainActivity"
+            android:name="com.noban.fieldvalidation.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Fieldvalidation.NoActionBar">
+            android:theme="@style/Theme.Fieldvalidation.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
